--- a/MDT/index.html
+++ b/MDT/index.html
@@ -152,7 +152,7 @@
                             </div>
                             <h3>Maquete Interativa</h3>
                         </div>
-                        <img src="https://sdmntprcentralus.oaiusercontent.com/files/00000000-c464-61f5-8e25-03455d0ebc40/raw?se=2025-09-11T18%3A12%3A06Z&sp=r&sv=2024-08-04&sr=b&scid=6ec78085-83d0-58c2-b3cc-137eaf12b02f&skoid=ec8eb293-a61a-47e0-abd0-6051cc94b050&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-10T23%3A40%3A56Z&ske=2025-09-11T23%3A40%3A56Z&sks=b&skv=2024-08-04&sig=QvaXpMdm2N1xiGuVnctMD/CaE%2BqSVfXjZ/MvL%2BjW%2B7I%3D" alt="Infraestrutura integrada">
+                        <img src="./css/img/ChatGPT Image 11 de set. de 2025, 14_18_19.png" alt="Infraestrutura integrada">
                         <p>Visualize todos os modais integrados em uma maquete 3D interativa.</p>
                         <div class="modal-footer">
                             <span class="modal-badge">🖱️ Interativo</span>
